--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clone Spotify</title>
+    <title>Clone Spotify JG</title>
     <link rel="icon" href="Spotify_icon.ico">
     <link rel="stylesheet" href="styles.css" />
   </head>
